# kdmt

./: .gitignore  CMakeLists.txt  Keydomet.pptx  LICENSE  README.md
ext/catch/: CMakeLists.txt
full_bench/: CMakeLists.txt  InputProvider.cpp  InputProvider.h  benchmarks.cpp
lib/: CMakeLists.txt  Keydomet.h
min_bench/: CMakeLists.txt  Timer.h  main.cpp
tests/: CMakeLists.txt  KeyDometTests.cpp  TestsMain.cpp
